# django-ca

./: .dockerignore  .editorconfig  .gitignore  .isort.cfg  .mypy.ini  .pep8  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .readthedocs.yml  .repo-maint.yaml  .stunnel4-revoked.conf  .stunnel4.conf  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  ChangeLog.md  Dockerfile  Dockerfile.alpine  MANIFEST.in  README.md  Vagrantfile  common.py  compose.yaml  dev.py  docker-compose.yml  fab.conf.example  fabfile.py  fsinf_at.crt  opencode.json  pylintrc  pyproject.toml  readthedocs.yaml  recreate-fixtures.py  requirements-dev.txt  requirements-docs.txt  requirements-pinned.txt  requirements.txt  setup.cfg  setup.py  (+3 more)
.github/actions/build-docker-image/: action.yaml
.github/codeql/: config.yml
.github/workflows/: codeql.yml  docker-maintenance.yml  docker.yml  docs.yml  faketime.yml  mariadb.yml  mypy.yml  postgres.yml  pull.yml  quality.yml  tests.yml  wheel.yml
ca/: manage.py  requirements.txt
ca/ca/: __init__.py  asgi.py  celery.py  demosettings.py  localsettings.example  localsettings.py.example  localsettings.py.sample  settings.py  settings_utils.py  test_settings.py  urls.py  utils.py  wsgi.py
ca/certificate/: managers.py  models.py
ca/certificate_authority/: managers.py  models.py  utils.py
ca/django_ca/: __init__.py  acme.py  admin.py  apps.py  ca_settings.py  checks.py  conf.py  constants.py  converters.py  crl.py  deprecation.py  extensions.py  fields.py  forms.py  managers.py  migration_helpers.py  modelfields.py  models.py  mypy.py  ocsp.py  profiles.py  querysets.py  signals.py  subject.py  tasks.py  tests.py  typehints.py  urls.py  utils.py  views.py  widgets.py
conf/: 00-docker.yaml
conf/compose/: 10-docker-compose.yaml
conf/source/: 00-settings.yaml  500.html  manage
devscripts/: clean.py  code_quality.py  commands.py  config.py  coverage.py  create-testdata.py  docker.py  out.py  pyproject.toml  recreate_fixtures.py  recreate_fixtures_helpers.py  release.py  test-imports.py  tutorial.py  utils.py  validate-state.py  validate-testdata.py  validate.py  versions.py
devscripts/commands/: __init__.py  build.py  clean.py  code_quality.py  coverage.py  docker_test.py  init_demo.py  pin_requirements.py  recreate_fixtures.py  release.py  test.py  tutorial-helpers.py  update_ca_data.py  validate.py
devscripts/dev/: config.py  out.py  tutorial.py  utils.py
devscripts/files/: Dockerfile.certbot  Dockerfile.wheel  Dockerfile.wheel.test  cli.ini  compose.certbot.yaml  django-ca-dns-auth.py  django-ca-dns-clean.py  django-ca-test-validation.sh  docker-compose.certbot.yaml
devscripts/standalone/: check-clean-docker.py  clean.py  create-testdata.py  test-connectivity.py  test-imports.py  validate-testdata.py
devscripts/validation/: docker.py  docker_compose.py  license_headers.py  state.py  wheel.py
docker/: celery.sh  compose.yaml  compose.yml  localsettings.py  settings.yaml  start.sh  uwsgi.sh
docker/conf.d/: default.conf
docs/: Makefile  make.bat
docs/source/: acme.rst  ca_examples.rst  ca_management.rst  cert_management.rst  changelog.rst  cli_interface.rst  conf.py  contribute.rst  crl.rst  deprecation.rst  development.rst  docker.rst  extensions.rst  index.rst  install.rst  install_as_app.rst  install_as_project.rst  intro.rst  key_backends.rst  manage_commands.rst  ocsp.rst  profiles.rst  quickstart_as_app.rst  quickstart_docker_compose.rst  quickstart_from_source.rst  release.rst  rest_api.rst  settings.rst  signals.rst  spelling_wordlist.txt  standards.rst  update.rst  web_interface.rst
gunicorn/: gunicorn.conf.py
nginx/: default.conf  default.template  headers.conf  source.template  ssl.conf  tls.template
nginx/include.d/: acme.conf  acme.conf.template  admin.conf  api.conf  api.conf.template  ca.conf  ca.conf.template  gunicorn_params.conf  headers.conf  proxy.conf  upstream.conf
requirements/: requirements-ci.txt  requirements-core.txt  requirements-dev-common.txt  requirements-devscripts.txt  requirements-dist.txt  requirements-docker.txt  requirements-docs.txt  requirements-libs.txt  requirements-lint.txt  requirements-mypy.txt  requirements-pinned.txt  requirements-postgres.txt  requirements-redis.txt  requirements-rtd.txt  requirements-sphinx.txt  requirements-test.txt  requirements-tox.txt  requirements-travis.txt
scripts/: celery.sh  celerybeat.sh  gunicorn-health.py  gunicorn.sh  uwsgi-health.py  uwsgi.sh
scripts/include.d/: functions.sh
stubs/: django_object_actions.pyi  django_webtest.pyi  idna.pyi  josepy.pyi  ocspbuilder.pyi
stubs/OpenSSL/: __init__.pyi  crypto.pyi
stubs/acme/: challenges.py  challenges.pyi  fields.pyi  jws.pyi  messages.pyi  mixins.py
stubs/celery/: __init__.pyi  app.pyi  local.pyi  result.pyi  typehints.pyi
stubs/dns/: __init__.pyi  enum.pyi  exceptions.pyi  rdata.pyi  rdataclass.pyi  rdatatype.py  resolver.pyi
stubs/josepy/: __init__.pyi  b64.pyi  json_util.pyi  jwk.pyi  util.py
stubs/oscrypto/: asymmetric.pyi
stubs/pyvirtualdisplay/: __init__.pyi  display.pyi
stubs/requests_mock/: __init__.pyi  adapter.pyi  mocker.pyi
stubs/webtest/: __init__.pyi  forms.pyi  response.pyi
systemd/: django-ca-celery.service  django-ca-celerybeat.service  django-ca.service  django-ca.socket  systemd.conf
tutorials/: quickstart_from_source.yaml
tutorials/compose/: cert-renewal.sh  compose.pebble.yaml  env  example.com.csr.pem  nginx-reload.sh  tutorial.yaml
tutorials/docker/: 10-localsettings.yaml  20-database-mariadb.yaml  20-database-postgres.yaml  localsettings.yaml  nginx.conf  tutorial.yaml
tutorials/docker-compose/: compose.override.yaml  env  tutorial.yaml
tutorials/source/: 10-localsettings.yaml  20-cache-memcached.yaml  20-cache-redis.yaml  20-database-mariadb.yaml  20-database-postgres.yaml  30-broker-rabbitmq.yaml  30-broker-redis.yaml  99-runtime.yaml  Vagrantfile.jinja  tutorial.yaml
uwsgi/: source.ini  standalone.ini  uwsgi.ini
vagrant/: backend.sh  broker.sh  cache.sh  common-django-ca.sh  common.sh  db.sh  frontend.sh
vagrant/config/: 00-base.yaml
(+1147 files in other folders)
